fixed gallery spacing for real this time
- finally made it so that large, tall, wide, and normal items are all the same

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -666,6 +666,26 @@ footer {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   margin: 0.5rem 5%;
+  
+  .wide {
+    grid-column: span 2;
+    aspect-ratio: 2 / 1;
+  }
+
+  .tall {
+    grid-row: span 2;
+    aspect-ratio: 1 / 2;
+  }
+
+  .large {
+    grid-column: span 2;
+    grid-row: span 2;
+    aspect-ratio: 1 / 1;
+  }
+
+  .wide, .large {
+    padding: 5%;
+  }
 }
 
 .gallery-item {
@@ -674,9 +694,9 @@ footer {
   cursor: zoom-in;
   aspect-ratio: 1 / 1;
   transition: transform 0.2s ease;
-  padding: 5%;
+  padding: 10%;
   box-sizing: border-box;
-  
+
   &:hover {
     transform: scale(1.05);
   }
@@ -691,22 +711,6 @@ footer {
   figcaption {
     display: none;
   }
-}
-
-.wide {
-  grid-column: span 2;
-  aspect-ratio: 2 / 1;
-}
-
-.tall {
-  grid-row: span 2;
-  aspect-ratio: 1 / 2;
-}
-
-.large {
-  grid-column: span 2;
-  grid-row: span 2;
-  aspect-ratio: 1 / 1;
 }
 
   // Lightbox 
